<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dimen_660dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="@dimen/dimen_640dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:background="@drawable/dialog_bg_white_round"
        android:orientation="vertical"
        android:padding="@dimen/dimen_36dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/dialog_checkcontact_titel"
            android:textColor="@color/base_black"
            android:textSize="@dimen/dimen_40dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_hint_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_32dp"
            android:textColor="@color/base_gray"
            android:textSize="@dimen/dimen_30dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_52dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_checkcontact_qq_title"
                android:textColor="@color/base_gray"
                android:textSize="@dimen/dimen_30dp" />

            <TextView
                android:id="@+id/tv_show_qq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textColor="@color/base_black"
                android:textSize="@dimen/dimen_32dp" />

            <TextView
                android:id="@+id/tv_copy_qq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_checkcontact_copy"
                android:textColor="@color/color_007cff"
                android:textSize="@dimen/dimen_30dp"
                android:visibility="gone" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:background="@color/color_eff1f7" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_52dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_checkcontact_wechat_title"
                android:textColor="@color/base_gray"
                android:textSize="@dimen/dimen_30dp" />

            <TextView
                android:id="@+id/tv_show_wechat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textColor="@color/base_black"
                android:textSize="@dimen/dimen_32dp" />

            <TextView
                android:id="@+id/tv_copy_wechat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_checkcontact_copy"
                android:textColor="@color/color_007cff"
                android:textSize="@dimen/dimen_30dp"
                android:visibility="gone" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:background="@color/color_eff1f7" />


        <TextView
            android:id="@+id/tv_submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_92dp"
            android:layout_marginTop="@dimen/dimen_52dp"
            android:background="@drawable/dialog_bg_red_round"
            android:gravity="center"
            android:text=""
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_34dp"
            android:textStyle="bold"
            android:visibility="gone" />
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_cancel"
        android:layout_width="@dimen/dimen_44dp"
        android:layout_height="@dimen/dimen_44dp"
        android:layout_alignParentRight="true"
        android:src="@drawable/btn_dialog_cancel" />
</RelativeLayout>